Fixed Header Image jumpning around in Desktop Scale

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -518,7 +518,7 @@ section {
     text-align: center;
   }
   .about .image img {
-    max-width: 80%;
+    max-width: 100%;
   }
 }
 
